--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Web 前端 Javascript"
+title: Web 前端 Javascript
 email: 404645486@qq.com
 description: > # web 前端 javascript html css 知识 积累
 baseurl: "" # the subpath of your site, e.g. /blog/
