--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: JS开发
+title: JS 开发 博客
 email: 404645486@qq.com
 description: > # web javascript html css
 baseurl: "" # the subpath of your site, e.g. /blog/
