--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: JS 开发 博客
+title: JS_开发_博客
 email: 404645486@qq.com
 description: > # web javascript html css
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://www.jihua.com" # the base hostname & protocol for your site
+url: "http://blog.chiwei.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
