--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: JS_开发_博客
+title: blog.chiwei.pub
 email: 404645486@qq.com
 description: > # web javascript html css
 baseurl: "" # the subpath of your site, e.g. /blog/
